# open62541-JNIWrap-Java-API

./: .gitignore  CMakeLists.txt  OpcUa_Java_API.sln  README.md
opcua_java_api/: client_api_base.cpp  client_api_base.h  opcua_java_api.vcxproj  open62541.c  open62541.h  open62541.i  open62541_helper.cpp  open62541_helper.h  open62541_wrap.cxx  open62541_wrap.h  server_api_base.cpp  server_api_base.h  stdint.i  types_map.cpp  types_map.h
